# dbar

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  typos.local.toml  typos.toml
.github/workflows/: ci.yml
docs/: ortho-config-users-guide.md  rstest-bdd-users-guide.md  scripting-standards.md  tmux-statuslines-in-a-nutshell.md  users-guide.md
docs/execplans/: initial-implementation.md
src/: cache.rs  command.rs  config.rs  error.rs  git.rs  github.rs  install.rs  lib.rs  main.rs  render.rs  status.rs  tmux.rs  types.rs
tests/: e2e_tests.rs  rstest_bdd_tests.rs
tests/e2e/: mod.rs  status_snapshot.rs
tests/e2e/snapshots/: e2e_tests__e2e__status_snapshot__status_snapshot_clean_git_full_width_with_pr.snap  e2e_tests__e2e__status_snapshot__status_snapshot_dirty_git_default_width.snap  e2e_tests__e2e__status_snapshot__status_snapshot_without_git.snap
tests/rstest_bdd/: mod.rs  status.feature  status_steps.rs
